k8s/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapi
  name: api-service
spec:
  selector:
    app: api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: api-svc-port
    nodePort: 31000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapi
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: apiroot:v1
        imagePullPolicy: Never
        name: api
        ports:
        - containerPort: 5555
          name: api-svc-port
