k8s/proxy-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapi
  name: proxy-service
spec:
  selector:
    app: proxy
  type: NodePort
  ports:
  - port: 80
    nodePort: 31002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapi
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - image: api-proxy:v2
        imagePullPolicy: Never
        name: proxy
        ports:
        - containerPort: 80
          name: proxy
